--- a/sap.Rmd
+++ b/sap.Rmd
@@ -13,11 +13,11 @@ vhist:
 - num: 0.1
   date: "2020-01-17"
   initial: "JT"
-  comment: "Draft created"
+  comment: "Draft created."
 - num: 0.2
-  date: "2020-03-01"
+  date: "2020-03-17"
   initial: "JT, JM"
-  comment: "Incorporate estimands"
+  comment: "Incorporate estimands, re-work secondary analysis outline."
 lot: yes
 output: 
   bookdown::pdf_document2:
@@ -65,7 +65,7 @@ def <- data.frame(
     linebreak("A parent of a child including a person who is regarded as the legally responsible caregiver of the child under law.\n"),
     linebreak("Participating SmartVax GPs and community-based providers.\n"),
     linebreak("Any child belonging to a parent whom, at the moment of enrolment, already has another child enrolled.\n"),
-    "A child who has not received all of the age-appropriate vaccinations recommended by the standard childhood immunisation schedule."
+    linebreak("A child who has not received all of the age-appropriate vaccinations recommended by the standard childhood immunisation schedule.\n")
   )
 )
 ktab <- knitr::kable(def, booktabs = TRUE, linesep = "", escape = F) 
@@ -77,7 +77,7 @@ kableExtra::kable_styling(ktab, font_size = 10, bootstrap_options = "condensed",
 # Introduction
 
 The purpose of this document is to describe the statistical methods which will be used to analyse data in the AuTOMATIC: Adaptive Trial of MessAging to improve Immunisation Coverage trial. 
-It is written for statisticians and should be read in conjuction with the protocol.
+It is written for statisticians and should be read in conjunction with the protocol.
 
 The basic trial structure, objectives, endpoints, and quantities of interest are outlined in Section \@ref(study-design), the eligibility criteria are explained in \@ref(x), the statistical model and quantities of interest are introduced in Section \@ref(statistical-methods), trial adaptations are defined in Section \@ref(interim-analyses-and-trial-adaptations), and a summary of trial operating characteristics or provided in Section \@ref(operating-characteristics).
 
@@ -158,7 +158,7 @@ This is a Bayesian adaptive, factorial, superiority trial.
 Frequent interim analyses will be performed to assess if a combination of message framing and timing is superior to one or more other interventions. 
 Intervention performance with respect to the primary outcome will be used to inform response adaptive randomisation leading to a higher allocation of future participants to better performing interventions.
 
-In addition to the response adpative randomisation, the trial also allows early stopping for:
+In addition to the response adaptive randomisation, the trial also allows early stopping for:
 
   1) Superiority if there is substantial evidence that one intervention arm results in a higher 28 day vaccination proportion than all others including control.
   2) Non-superiority if there is evidence that no one intervention arm results in a sufficiently higher 28 day vaccination proportion than all others.
@@ -172,7 +172,7 @@ In addition to the response adpative randomisation, the trial also allows early 
 The primary outcome is vaccination status at 28 days after the vaccine measured by the difference between date of vaccine administration and due date as recorded in the SmartVax system for the *index vaccination* of each parent randomised.
 Refer to Section \@ref(definitions) for definitions.
 
-The parent (whose behaviour we seek to change) can only be considered naïve to the intervention on the first child-vaccination occasion, therefore, the primary analysis will be performed on the outcome of the first intervention occasion for each parent. 
+The parent (whose behaviour we seek to change) can only be considered naive to the intervention on the first child-vaccination occasion, therefore, the primary analysis will be performed on the outcome of the first intervention occasion for each parent. 
 
 ### Secondary outcomes
 
@@ -193,13 +193,12 @@ Estimands and sensitivity analyses are described according to recommendations in
 
 #### Primary Estimand
 
-**Objective:** To determine the real-world comparative effectiveness of the first vaccine-provider initiated SMS reminder content and timing for increasing the proportion of children vaccinated within 28 days of scheduled routine vaccine date.
+**Objective:** To determine the real-world comparative effectiveness of the first vaccine-provider initiated SMS reminder framing and timing for increasing the proportion of children vaccinated within 28 days of scheduled routine vaccine date.
 
 **Strategy:** Treatment-policy, irrespective of age-at-scheduled-vaccine.
 
 **Population of interest:** Parents of index children receiving their index vaccine, in addition to meeting the study eligibility criteria in Section \@ref(eligibility-criteria).
 No details are provided from participating sites concerning any reasons for delayed child vaccine administration or vaccines administered outside the site. 
-Therefore, for records where it is not possible to determine beyond a reasonable doubt which scheduled childhood vaccine is being administered, the parent will be excluded from the statistical analysis.  
 
 **Endpoint:** Evidence of administration of vaccine for index vaccine at participating site within 28 days of scheduled vaccine date (binary endpoint).
 
@@ -221,33 +220,42 @@ Further details are given in Section \@ref(sensitivity-analyses-of-primary-outco
 
 #### Secondary Estimand
 
-**Objective:** To determine the real-world timeliness of first vaccine-provider initiated SMS reminder content and timing for reducing the time to vaccination for routine childhood vaccines.
+**Objective:** To determine the real-world timeliness of first vaccine-provider initiated SMS reminder framing and timing for reducing the time to vaccination for routine childhood vaccines.
 
 **Strategy:** Treatment-policy, irrespective of age-at-scheduled-vaccine.
 
 **Population of interest:** Parents of index children receiving their index vaccine, in addition to meeting the study eligibility criteria in Section \@ref(eligibility-criteria).
-No details are provided from participating sites concerning any reasons for delayed child vaccine administration or vaccines administered outside the site. 
-Therefore, for records where it is not possible to determine beyond a reasonable doubt which scheduled childhood vaccine is being administered, the parent will be excluded from the statistical analysis.  
+No details are provided from participating sites concerning any reasons for delayed child vaccine administration or vaccines administered outside the site.
 
 **Endpoint:** Time to vaccination at participating sites from the date of randomisation.
-Vaccine administration which occurs later than 90 days after randomisation or within 28 days of a subsequently scheduled vaccination 
+Vaccine administration which occurs later than **(60?)90** days after randomisation will be censored.
+The reminder system records no information as to which of the scheduled vaccines have been given.
+Therefore, vaccinations which occur within 14 days of a subsequently scheduled vaccination are assumed to correspond to the upcoming scheduled dose rather than the preceding one, unless investigation shows evidence that another vaccination had is given closer to that subsequent scheduled vaccination.
+
+**Treatment description:** Control arm and 12 intervention arms as detailed in Section \@ref(intervention).
+
+**Treatment of intercurrent events:** Parents will be included in the intervention group they were allocated to, irrespective of whether they received the SMS text or materials related to the site standard-of-care or not. 
+In the absence of evidence of vaccine administration within 60 days of scheduled date at the participating sites, including due to participants who are lost to follow up or move out of the GP-site catchment area, it will be assumed that the vaccine has not been administered and the endpoint will be right censored at 60 days. 
+
+**Statistical method:** Bayesian discrete-time hazard regression model; more details in Section \@ref(analysis-of-secondary-outcomes).
+
+**Population summary:** The posterior summary of restricted mean survival time under each intervention relative to the control group.
 
 
 ## Randomisation
 
 The parent is the unit of randomisation, as it is their behaviour we seek to change.
-Parents of eligible children will therefore be ranodmised to one of the 13 arms.
-Each child may receive more than one scheduled vaccination during the study period, but all parents will receive the same intervention for all eligible children under their care for all scheduled vaccinations.
+Parents of eligible children will therefore be allocated at random to one of the 13 arms.
+Each child may receive more than one scheduled vaccination during the study period, but the parent will receive the same intervention for all eligible children under their care for all scheduled vaccinations.
 
 To avoid randomising the same parent to different arms across different sites (in case they have registered at multiple SmartVax GPs and/or community-based providers) the random allocation will be automatically generated from a central de-identified allocation list.
 The use of centralised randomisation will ensure that if the parent is registered at multiple participating SmartVax sites, they will be allocated to the same intervention arm for all eligible children under their care, at all scheduled vaccine doses and across all participating sites throughout the study period. 
 The standard de-identification algorithm employed across all sites will ensure that the same unique parent ID will be generated at all sites based on the recorded mobile phone number. 
 It is anticipated that there will be a low rate of incorrect or out of date mobile phone numbers recorded in the site records and that this will be equally likely to occur across all intervention arms. 
 
-Prior to the first interim analysis, parents will be equally likely to be randomised to any of the intervention or control arms.
-This is the run-in period before response-adaptive randomisation commences.
+Prior to the first interim analysis, parents will be equally likely to be randomised to any of the intervention or control arms; this is the run-in period before response-adaptive randomisation commences.
 Following each interim analysis, the allocation ratios to each intervention arm will be updated and a new allocation list generated on the middleware application. 
-Newly randomised parents will then be allocated to arms according to the new allocation list.
+All parents randomised after an interim will then be allocated to arms according to the new allocation list.
 
 ## Sample size
 
@@ -260,7 +268,7 @@ This sample size was chosen based on simulations of the adaptive trial (see Sect
 Up to 10,000 parents will be enrolled from GP and public vaccination clinics participating in SmartVax across Australia. 
 A diverse geographical range of clinics will be invited to participate to ensure representation from a broad socio-demographic cross section of suburbs, including from regional Australia. 
 Agreements will be sought from all clinics, and governing bodies prior to enrolling at these sites.
-Study participation (parent and child/children) is from parent’s randomisation until the last scheduled vaccine dose has been administered after four years of age for any child under their care or until the trial concludes.
+Study participation (parent and child/children) is from parent’s randomisation until the last scheduled vaccine dose has been administered before five years of age for any child under their care or until the trial concludes.
 
 ## Eligibility criteria
 
@@ -286,8 +294,8 @@ It may be necessary to withdraw the following participants from the analysis if:
 The primary analysis dataset consists of index vaccines for each parent.
 The secondary outcome datasets will consist of all children and all vaccines for each parent.
 
-The data will be analysed and reported on an intention-to-treat (ITT) basis with all randomised participants contributing.
-In particular, we cannot know that the SMS reminders were recieved or read by the participants, only that they were sent.
+The data will be analysed and reported on an intention-to-treat (ITT) basis with all randomised participants contributing according to the estimands defind in \@ref(estimands).
+In particular, we cannot know that the SMS reminders were received or read by the participants, only that they were sent.
 Participants will be analysed in the arm they were allocated to.
 
 # Statistical Methods
@@ -314,7 +322,7 @@ Inferences in this trial will be based on a Bayesian statistical model.
 The model will be used to estimate the probability of vaccination by 28 days (primary endpoint) following the scheduled due date for the various interventions.
 The statistical model will account for variation in outcomes by intervention effect and scheduled age of vaccination. 
 Eligible scheduled vaccinations occur at 2,4,6,12,18, and 48 months of age.
-In presenting the relevant details, refer to Table \@ref(tab:intsum) for the breakdown of intervention arm groupings according to message framing and timings as used in this document.
+The factorial design of the intervention arms in terms of SMS message framing and timing is presented in Table \@ref(tab:intsum) with cell labels for each framing-timing combination.
 
 In what follows, the message framings are denoted by $a$ and message timings by $b$. 
 The interim analyses are designated by $t=1,...,T$ and cohort $t$ refers to individuals recruited between interim $t-1$ and $t$ which has sample size $n_t$. 
@@ -338,23 +346,23 @@ The $\gamma^{ba}_j,\ j=1,...,12$, constrained to sum to zero on the relevant mes
 
 The $\beta$ are other model parameters for the model covariates: scheduled age of vaccination.
 
-The prior distributions for the intercept and average intervention effect parameters are set as non-informative
+The prior distributions for the intercept and average intervention effect parameters will be set to
 $$
-\alpha_0,\alpha_1\sim N(0, 10).
+\alpha_0,\alpha_1\sim N(0, 1.5^2).
 $$
-The priors on the $\gamma$ terms are set so as to enforce the relevant sum-to-zero constraints. 
-We would expect interaction effects to be small relative to the main effects, which are reflected by the chosen prior co-variances.
+The priors on the $\gamma$ terms will be set so as to enforce the relevant sum-to-zero constraints. 
+We would expect interaction effects to be smaller relative to the main effects, which are reflected by the chosen prior co-variances.
 $$
 \begin{aligned}
 S_l &= I_l - l^{-1}J_l \\
-\gamma^a &\sim N(0, 10S_4) \\
-\gamma^b &\sim N(0, 10S_3) \\
+\gamma^a &\sim N(0, 1.5^2S_4) \\
+\gamma^b &\sim N(0, 1.5^2S_3) \\
 \gamma^{ba} &\sim N(0, S_4\otimes S_3).
 \end{aligned}
 $$
-The prior on other model parameters will be weakly informative
+The prior on other model parameters will be
 $$
-\beta \sim N(0, 10).
+\beta \sim N(0, 1.5).
 $$
 
 ## Sensitivity analyses of primary outcome
@@ -371,16 +379,16 @@ $$
 \sigma_\tau^2 &\sim \text{IG}(0.25, 0.1).
 \end{aligned}
 $$
-The parameter $\tau$ has a first-order random walk prior to smooth baseline changes in the response across cohorts. 
-The prior on $\sigma_\tau^2$ highlights that we expect small changes in baseline rates between cohorts, but that the posterior will be highly influenced by the obeserved data.
-This specification does not take into account the time between recruitment of cohorts. 
+The parameter $\tau$ has a first-order random walk prior to smooth baseline changes in the response across the cohorts recruited between interims. 
+The prior on $\sigma_\tau^2$ highlights that we expect small changes in baseline rates between cohorts, but that the posterior will be highly influenced by the observed data.
+This specification does not take into account the time between recruitment of cohorts, i.e. it assumes they are regularly spaced over time. 
 If changes in the accrual pattern between cohorts are observed, the above can be modified to weight according to the time between period cohorts.
 
 ## Statistical quantities
 
 The posterior distribution of the model parameters will be approximated using Markov chain Monte Carlo methods. 
 At least 10,000 draws will be generated from the joint posterior distribution, and these draws will be used to approximate the quantities of interest as outlined in the current section and Section \@ref(interim-analyses-and-trial-adaptations).
-Denote the number of draws by $M$. For each of the 13 arms, define $\mu_j$ as the log-odds of vaccination by 28 days for arm $j=0,...,12$ and define $\theta_{jk} = \mu_j - \mu_k$ as the pairwise differences for $j,k=0,...,12$.
+In more detail, denote the number of draws by $M$. For each of the 13 arms, define $\mu_j$ as the log-odds of vaccination by 28 days for arm $j=0,...,12$ and define $\theta_{jk} = \mu_j - \mu_k$ as the pairwise differences for $j,k=0,...,12$.
 
 ### Posterior summaries
 
@@ -401,7 +409,7 @@ $$
 $$
 The **current best intervention arm** is then defined as $b_t = \arg\max_j \pi_{jt}$.
 
-It may be that many or most intervention arms appear similarly effective, in which case, they could all have approximately equal posterior probablity of being superior.
+It may be that many or most intervention arms appear similarly effective, in which case, they could all have approximately equal posterior probability of being superior.
 A superiority threshold then may never be reached.
 We would prefer to stop early and avoid spending more resources trying to differentiate between small effects amongst many arms when all interventions are similarly effective, however we are unlikely to have sufficient sample size to declare global equivalence amongst intervention arms.
 Therefore, in addition to a superiority assessment based on the above value, a non-superiority assessment will also be made with reference to a defined margin $\Delta>0$.
@@ -476,39 +484,45 @@ $$
 \begin{aligned}
 \eta_{ijt} &= s_0(t) + s_{j(i)}(t) \\
 \lambda_{ijt} &= h(\eta_{ijt}) \\
-s_0(t) &= \beta_0 + \beta_1 + \sum_{l=1}^L b_l z_l(t),\ b|\sigma^2, \ \sigma^2\sim \text{IG}(a_\sigma,b_\sigma) \\
-s_j(t) &= \gamma_{0j} + \gamma_{1j} + \sum_l^L g_{jl} w_l(t),\ g_j | \tau_j^2, \ \tau_j^2\sim\text{IG}(a_\tau,b_\tau)
+s_0(t) &= \beta_0 + \beta_1 + \textstyle\sum_{l=1}^L b_l z_l(t) \\
+s_j(t) &= \gamma_{0j} + \gamma_{1j} + \textstyle\sum_l^L g_{jl} w_l(t) \\
+\beta &\sim N(0,5^2) \\
+\gamma &\sim N(0,5^2) \\
+b|\sigma^2 &\sim N(0,\sigma^2)\\
+g_j|\tau_j^2 &\sim N(0, \tau_j^2)\\
+\sigma^2 &\sim C^+(0, 2) \\
+\tau_j^2 &\sim C^+(0, 2)
 \end{aligned}
 $$
-where $z_l$ are spline bases enforcing a smoothing penalty and $s_j$ is the curve for individuals $i$ in group $j$ for the chosen link function $h$.
-
+where $z_l$ are spline bases enforcing a smoothing penalty and $s_j$ is the curve for individuals $i$ in group $j$ and $h$ is the chosen link function.
 We by default choose $h(\eta) = 1 - \exp(-\exp(\eta))$, that is a Gompertz hazards model.
+
 All individuals contribute to the baseline curve until the the timing of their intervention, that is $s_j(t)$ is 0 until $t \geq \tau_j$ where $\tau_j$ is the time at which a message is received for individuals in group $j$.
 
 From this model primary interest will be on the restricted mean survival time (RMST) [@royston2011; @royston2013] to $t^\star$ in each group, defined as
 $$
-\text{RMST}_j(t^\star) = \int_0^{t^\star} S_j(t) dt
+\text{RMST}_j(t^\star) = \int_0^{t^\star} S_j(t) dt,\quad j=0,1,....,12.
 $$
 with $S_j(t)$ the survival curve of remaining unvaccinated obtained from the above model for group $j$. 
 In particular, we will compare groups according to the difference in their RMST relative to the baseline (no intervention) survival.
+$$
+\Delta_j(t^\star) = \int_0^{t^\star} S_j(t) - S_0(t)dt,\quad j=1,...,12.
+$$
 
-If issues occur with the above model we will also consider the simplified grouped proportional hazards model
+If estimation issues occur with the above model we will also consider the simplified grouped proportional hazards model
 $$
 \begin{aligned}
 \eta_{it} &= s_0(t)  + X(t)\beta \\
 \lambda_{it} &= h(\eta_{it})
 \end{aligned}
 $$
-where the baseline hazard is modelled as previously, but each intervention effect is assumed to an additive constant on the transformed hazard scale.
+where the baseline hazard is modelled as previously, but each intervention effect is assumed to be an additive constant on the transformed hazard scale.
 
-The variables $x_{it}$ are time-varying indicators for the intervention received (message and timing).
-The relevant components of $x_{it}$ only take on the value 1 on the day the SMS was sent, prior to which all $x_{it}$ elements are equal to 0. The $\gamma_t$ parameters will be smoothed across time points by modelling them as a P-spline term on time, $\gamma_t = f(t)$.
-
-Due to nesting of vaccinations within children, and children within parents, secondary outcome 3. will include additional random effects terms in the linear predictor to account for the grouping of children and their vaccinations.
+Due to nesting of vaccinations within children, and children within parents, secondary outcome 3. will include additional random effects terms in the linear predictor to account for the grouping of children within their parents.
 
 ## Interim analyses and trial adaptations
 
-Interim analyses are scheduled to occur every 500 participants who meet the primary endpoint. 
+Interim analyses are scheduled to occur every 500 participants who provide information on the primary endpoint. 
 Only the primary analysis will be performed at each interim and thus only the primary outcome will inform the response-adaptive randomisation and trial adaptations.
 At each interim analysis there will be index cases who are enrolled but yet to reach 28 days after their due vaccination; these are not eligible for inclusion in the current interim analysis but will be included in subsequent interims once their 28 days has passed.
 With the maximum sample size of 10,000, an interim every 500 participants implies a maximum of 20 interim analyses.
@@ -579,11 +593,9 @@ $$
 
 ## Subgroup analyses
 
-The effect of SMS vaccine reminders on the primary endpoint will be determined in the final analysis for the following subgroups: 
+The effect of SMS vaccine reminders on the primary endpoint will be investigated in the final analysis for the following subgroups: 
 
 * Children at each scheduled age at vaccination (2, 4, 6, 12, 18 months and 48 months) 
-
-
 
 
 ## Missing data
@@ -609,7 +621,7 @@ For designs which satisfied this requirement, parameters were then selected by b
 For efficiency, simulations utilised variational approximations to the model parameter posteriors, and posterior quantities were calculated on the basis of 10,000 draws from this approximation. Operating characteristics were based on 10,000 simulations under each scenario. 
 Based on the simulation results, the trial parameters as outlined in this statistical analysis plan were chosen. 
 
-The chosen design controlled the family-wise false positive rate at 0.05 and provided at least 70% power when one framing and timing combination was superior by at least 0.25 in the log-odds of 28 day vaccination compared to all other inteventions with log-odds of response at 1.0.
+The chosen design controlled the family-wise false positive rate at 0.05 and provided at least 70% power when one framing and timing combination was superior by at least 0.25 in the log-odds of 28 day vaccination compared to all other interventions with log-odds of response at 1.0.
 The 28 day vaccination response value of $\text{expit}(1.0)\approx 0.73$ was chosen on the basis of historical data.
 The median sample size at stopping for non-superiority in the null scenario was 7,000. 
 The median sample size at stopping for superiority when one intervention arm is superior was 6,000.
